--- a/scss/themes/_footer.scss
+++ b/scss/themes/_footer.scss
@@ -3,14 +3,9 @@ div#contact {
 	background: #444;
 	text-align:center;
 	width:100%;
-	
-	h3{
-		color: #ccc;
-	}
 }
 
 .social{
-	margin: 5px;
 	i{
 		padding: 10px;
 		color: #ccc;
